fixed layout bug when opening console window

--- a/src/app/pages/user/user-pg/user-pg.component.css
+++ b/src/app/pages/user/user-pg/user-pg.component.css
@@ -2,10 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
-    background-color: #e3d3d3
-
+    background-color: #e3d3d3;
 }
 
 form {
